# grabify

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: pylint.yml
grabify/: __init__.py  __main__.py  cli.py  config.py  utils.py
src/grabify_cli/: __init__.py  __main__.py  cli.py  config.py
